deploy: 7f0820b2f966621aea46a498f76ada283a164ff8

--- a/_sources/naive_bayes.Rmd
+++ b/_sources/naive_bayes.Rmd
@@ -1,6 +1,5 @@
 ---
 jupyter:
-  orphan: true
   jupytext:
     notebook_metadata_filter: all,-language_info
     split_at_heading: true
@@ -13,6 +12,7 @@ jupyter:
     display_name: Python 3 (ipykernel)
     language: python
     name: python3
+  orphan: true
 ---
 
 # Naive Bayes classifiers
@@ -43,12 +43,12 @@ sns.pairplot(penguins, hue="species")
 ```
 
 ```{python}
-list(penguins)
+species_names = ['Chinstrap', 'Gentoo']
 ```
 
 ```{python}
 df = penguins.loc[
-    penguins['species'].isin(['Gentoo', 'Chinstrap']),
+    penguins['species'].isin(species_names),
     ['species', 'body_mass_g', 'bill_depth_mm']
 ]
 df
@@ -71,41 +71,49 @@ axes[1].hist(bm_by_species.get_group('Gentoo'));
 axes[1].set_title('Gentoo')
 ```
 
-While we are here:
+## Enumerate
+
+While we are here — we introduce `enumerate`.
+
+Imagine we need *both* the elements in a list, *and* the position of that element:
 
 ```{python}
-names = list(bm_by_species.groups)
-names
-```
-
-```{python}
-position_no = 0
-for name in names:
+position_no = 0  # A variable to keep track of the position (index).
+for name in species_names:
     print('Group', position_no, 'name is', name)
-    position_no = position_no + 1
+    position_no = position_no + 1  # We have to increment the position.
 ```
 
-Or:
+We can avoid the extra variable by using `enumerate`, wrapped around the set of
+things we want to process.  `enumerate` returns two things at each step — the
+position (index), and the next element from the set of things.
 
 ```{python}
-for position_no, name in enumerate(names):
+for position_no, name in enumerate(species_names):
     print('Group', position_no, 'name is', name)
 ```
+
+We use `enumerate` to do the plots more neatly below.
 
 The plots again:
 
 ```{python}
 fig, axes = plt.subplots(1, 2)
-for i, name in enumerate(bm_by_species.groups):
+for i, name in enumerate(species_names):
     axes[i].hist(bm_by_species.get_group(name))
     axes[i].set_title(name)
 ```
 
-As density plots (the area of the bars sums to 1):
+## Towards classification with probability
+
+We are going to start to think about getting the probability of a particular
+*mass* given we have a Chinstrap or a Gentoo penguin.  We might like to start
+with density histograms.  Here was ask Matplotlib to set the area of the bars
+to sum to 1.
 
 ```{python}
 fig, axes = plt.subplots(1, 2)
-for i, name in enumerate(bm_by_species.groups):
+for i, name in enumerate(species_names):
     axes[i].hist(bm_by_species.get_group(name), density=True)
     axes[i].set_title(name)
 ```
@@ -113,18 +121,21 @@ for i, name in enumerate(bm_by_species.groups):
 For the moment, let us model these two distributions as normal curves.
 
 ```{python}
-bm_params = bm_by_species.agg(['mean', 'std'])
+# Notice the Numpy std function (variance divisor is n rather than
+# (n - 1).  This is to match scikit-learn's implementation.
+bm_params = bm_by_species.agg(mean="mean", std=lambda x : np.std(x))
 bm_params
 ```
 
-We can use a Scipy statistics distribution to make a *normal* distribution with the same mean and variance.
+We can use a Scipy statistics distribution to make a *normal* distribution with
+the same mean and standard deviation.
 
 ```{python}
 import scipy.stats as sps
 ```
 
 ```{python}
-# The distribution
+# A normal distribution with the same mean and standard deviation.
 chinstrap_dist = sps.norm(bm_params.loc['Chinstrap', 'mean'],
                           bm_params.loc['Chinstrap', 'std'])
 ```
@@ -136,29 +147,37 @@ c_masses_x = np.linspace(chinstraps.min(), chinstraps.max(), 1000)
 plt.plot(c_masses_x, chinstrap_dist.pdf(c_masses_x), 'r:')
 ```
 
-With the actual densities:
+This is the plot along with the actual densities:
 
 ```{python}
 plt.hist(chinstraps, density=True)
 plt.plot(c_masses_x, chinstrap_dist.pdf(c_masses_x), 'r:')
 ```
 
-The normal (Gaussian) probability density function gives our estimate of the probability (density) of any given weight.
+The normal (Gaussian) probability density function gives our estimate of the
+probability (density) of any given weight.
 
 ```{python}
 chinstrap_dist.pdf(3500)
 ```
 
-With these we can get the probability of any mass in the dataset given that the penguin is a Chinstrap:
+With these we can get the probability of any mass in the dataset given that the
+penguin is a Chinstrap:
 
 $$
 P(\text{mass} | \text{Chinstrap})
 $$
 
-Let's fill those in.
+Actually, to be concise, let's use $m$ for $\text{mass}$ and $C$ for
+$\text{Chinstrap}$.
+
+$$
+P(m | C)
+$$
+
+We fill in the values of $P(m | C)$:
 
 ```{python}
-cpms = chinstrap_dist.pdf(df['body_mass_g'])
 df['p_m_given_c'] = chinstrap_dist.pdf(df['body_mass_g'])
 df
 ```
@@ -166,7 +185,13 @@ df
 Likewise:
 
 $$
-P(\text{mass}|\text{Gentoo})
+P(\text{mass}|\text{Gentoo}) 
+$$
+
+which we will write as:
+
+$$
+P(m | G)
 $$
 
 ```{python}
@@ -176,23 +201,22 @@ gentoos = bm_by_species.get_group('Gentoo')
 g_masses_x = np.linspace(gentoos.min(), gentoos.max(), 1000)
 plt.hist(gentoos, density=True)
 plt.plot(g_masses_x, gentoo_dist.pdf(g_masses_x), 'r:');
-plt.title('Gentoo density and estimated density')
+plt.title('Gentoo density and estimated density');
 ```
 
 ```{python}
-gpms = gentoo_dist.pdf(df['body_mass_g'])
-df['p_m_given_g'] = gpms
+df['p_m_given_g'] = gentoo_dist.pdf(df['body_mass_g'])
 df
 ```
 
-We also need prior probabilities for Chinstrap and Gentoo.
+We also need prior probabilities for Chinstrap ($C$) and Gentoo ($G$):
 
 $$
-P(\text{Chinstrap})
+P(C)
 $$
 
 $$
-P(\text{Gentoo})
+P(G)
 $$
 
 Let's just use the proportions in the dataset:
@@ -213,13 +237,12 @@ df['p_gentoo'] = p_gentoo
 df
 ```
 
-In our model, each individual mass can only come about in one of two situations: the penguin is a Chinstrap, or the penguin is a Gentoo.  These are mutually exclusive:
-
-Thus:
+In our model, each individual mass can only come about in one of two
+situations: the penguin is a Chinstrap, or the penguin is a Gentoo.  These are
+mutually exclusive, so we add the probabilities to give the probability of getting a particular mass value $m$:
 
 $$
-P(\text{mass}) = P(\text{mass} | \text{Chinstrap}) +
-                 P(\text{mass} | \text{Gentoo})
+P(m) = P(m | C) + P(m | G)
 $$
 
 ```{python}
@@ -227,12 +250,11 @@ df['p_mass'] = df['p_m_given_c'] + df['p_m_given_g']
 df
 ```
 
-How we have everything we need to work out the *posterior* probability that a penguin is a Chinstrap, given the weight of the penguin:
+How we have everything we need to work out the *posterior* probability that
+a penguin is a Chinstrap, given the weight of the penguin:
 
 $$
-P(\text{Chinstrap} | \text{mass}) = \frac{
-P(\text{mass} | \text{Chinstrap}) P(\text{Chinstrap})
-}{P(\text{mass})}
+P(C | m) = \frac{P(m | C) * P(C)}{P(m)}
 $$
 
 ```{python}
@@ -243,9 +265,7 @@ df
 Likewise:
 
 $$
-P(\text{Gentoo} | \text{mass}) = \frac{
-P(\text{mass} | \text{Gentoo}) P(\text{Gentoo})
-}{P(\text{mass})}
+P(G | m) = \frac{P(m | G) * P(G)}{P(m)}
 $$
 
 ```{python}
@@ -262,9 +282,22 @@ df
 
 But - wait - for our Bayes predictions, we don't actually need the $P(\text{mass})$ value.  Why?  Because we can calculate the ratio of the posterior probabilities like this:
 
+$$
+\text{LR} = \frac{P(C | m)}{P(G | m)}  \\
+= \frac
+{\frac{ P(m | C) * P(C) } { P(m) }}
+{\frac{P(m | G) * P(G)} { P(m) }} \\
+= \frac{P(m | C) * P(C)} {P(m | G) * P(G)}
+$$
+
 ```{python}
-likelihood_ratio = df['p_c_given_m'] / df['p_g_given_m']
-likelihood_ratio
+likelihood_ratio = ((df['p_m_given_c'] * df['p_chinstrap']) /
+                    (df['p_m_given_g'] * df['p_gentoo']))
+```
+
+```{python}
+# From the divide-out trick above, this gives us the same as:
+np.allclose(likelihood_ratio, df['p_c_given_m'] / df['p_g_given_m'])
 ```
 
 Notice we have divided out the $P(\text{mass})$ in this ratio.  Notice too that ratios above 1 mean more likely Chinstrap, and less than one mean less likely Chinstrap, more likely Gentoo.  So we get the same predictions from the likelihood as we would from the full posterior probabilities:
@@ -274,6 +307,26 @@ likelihood_predictions = np.where(
     likelihood_ratio > 1,
     'Chinstrap', 'Gentoo')
 np.all(df['bayes_predictions'] == likelihood_predictions)
+```
+
+The probabilities for the two categories do not sum to 1, because the
+probabilities $P(m | C)$, $P(m | G)$ do not sum to 1.  This in turn is because
+we are taking discrete samples from the continuous Gaussian, so the sum of the
+probabilities will depend on the samples.   We allow for this below by dividing
+the two probabilities by their (< 0) sum, to normalize them to sum to 1.
+
+```{python}
+raw_posteriors = df[['p_c_given_m', 'p_g_given_m']]
+posteriors = raw_posteriors.divide(raw_posteriors.sum(axis=1), axis=0)
+posteriors
+```
+
+As you may remember from the logit transform in logistic regression, we can also get probabilities from the likelihood ratios, with:
+
+```{python}
+# Probability from likelihood ratio
+p_from_lr = likelihood_ratio / (1 + likelihood_ratio)
+p_from_lr
 ```
 
 Here is the same process, using the Scikit-learn library.
@@ -290,26 +343,33 @@ df['sklearn_predictions'] = model.predict(df[['body_mass_g']])
 df
 ```
 
+Scikit-learn gives the same predictions as we do:
+
 ```{python}
 np.all(df['bayes_predictions'] == df['sklearn_predictions'])
 ```
 
+Scikit-learn also calculates the posterior probabilities:
+
 ```{python}
-np.set_printoptions(suppress=True)
-p_values = model.predict_proba(df[['body_mass_g']])
-p_values
+# The predict_proba values are just the posteriors.
+skl_posteriors = model.predict_proba(df[['body_mass_g']])
+# They are the same as ours, with calculation error.
+assert np.allclose(skl_posteriors, posteriors)
+# Show scikit-learn's posterior probabilities.
+pd.DataFrame(skl_posteriors, columns=list(posteriors))
 ```
+
+The `score` is the proportion of labels we predicted correctly:
 
 ```{python}
 model.score(df[['body_mass_g']], df['species'])
 ```
 
-```{python}
-np.mean(df['sklearn_predictions'] == df['species'])
-```
+Here we calculated the same value by hand(ish):
 
 ```{python}
-df
+np.mean(df['sklearn_predictions'] == df['species'])
 ```
 
 ## Putting the naïve into "naïve Bayes"
@@ -320,9 +380,11 @@ Now, let's also consider the `bill_depth_mm` values:
 sns.histplot(data=df, x="bill_depth_mm", hue="species")
 ```
 
+Make the distributions for bill depth:
+
 ```{python}
 bd_by_species = by_species['bill_depth_mm']
-bd_params = bd_by_species.agg(['mean', 'std'])
+bd_params = bd_by_species.agg(mean='mean', std=lambda x : np.std(x))
 # The distributions
 pd_dists = {}
 species = ['Chinstrap', 'Gentoo']
@@ -332,6 +394,8 @@ for name in species:
 
 pd_dists
 ```
+
+Plot the actual and estimated density, using the Gaussian approximations:
 
 ```{python}
 fig, axes = plt.subplots(1, 2)
@@ -344,7 +408,8 @@ for i, name in enumerate(species):
     axis.set_title(f'{name} density / est density')
 ```
 
-We can also think of these distributions in two-dimensions, along with the weight:
+We can also think of these distributions in two dimensions, along with the
+mass:
 
 ```{python}
 sns.scatterplot(df, x='body_mass_g', y='bill_depth_mm',
@@ -360,12 +425,13 @@ For the moment - let's say "yes" (it's independent).  That's *naïve*.  And
 that's where "naïve" Bayes reaches the name of the technique.
 
 
-Using independence, we can calculate the probability of a *combination* of a particular body mass and bill depth value with:
+Using independence, we can calculate the probability of a *combination* of a particular body mass and bill depth value.
+
+Call $P(d)$ the probability of a particular bill depth value.  Naïve Bayes
+estimates the probability of the combination with:
 
 $$
-P((\text{mass} \text{ and } \text{bill depth}) | \text{Chinstrap} ) =
-P(\text{mass} | \text{Chinstrap}) *
-P(\text{bill depth}) | \text{Chinstrap})
+P((m \text{ and } d) | C) = P(m | C) * P(d | C)
 $$
 
 
@@ -380,22 +446,21 @@ df
 The full formula for the posterior using the two measures is:
 
 $$
-P(\text{Chinstrap} | \text{mass and bill depth}) = \frac{
-P((\text{mass and bill_depth}) | \text{Chinstrap}) P(\text{Chinstrap})
-}{P(\text{mass and bill depth})}
+P(C | (m \text{ and } d)) = \frac{
+P((m \text{ and } d) | C) * P(C)
+}{P(m \text{ and } d)}
 $$
 
 The naïve version of the formula is:
 
 $$
-P(\text{Chinstrap} | \text{mass and bill depth}) = \frac{
-P(\text{mass} | \text{Chinstrap}) *
-P(\text{bill depth}) | \text{Chinstrap}) *
- P(\text{Chinstrap})
-}{P(\text{mass and bill depth})}
+P(C | (m \text{ and } d)) = \frac{
+P(m | C) * P(d | C) * P(C)
+}{P(m \text{ and } d)}
 $$
 
-But - using the likelihood trick above, we no longer have to calculate the denominator, we can just divide it out, to give the following ratio:
+But - using the likelihood trick above, we no longer have to calculate the
+denominator, we can just divide it out, to give the following ratio:
 
 ```{python}
 both_ratio = ((df['p_m_given_c'] * df['p_bd_given_c'] * df['p_chinstrap']) /
@@ -472,9 +537,5 @@ sns.scatterplot(df.loc[X_test.index],
 sns.scatterplot(x=xy[:, 0], y=xy[:, 1],
                 hue=test_model.predict(xy_df),
                 palette=sns.color_palette()[:2],
-                alpha=0.1);
-```
-
-```{python}
-
+                alpha=0.2);
 ```
